manifests/deployment-app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-app
      version: v1
  template:
    metadata:
      labels:
        app: my-app
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx
        command:
         - /bin/sh
         - -c
         - |
           # Write custom hostname to index.html
           echo "app-v1 I'm Canary service  app-v1 served from $HOSTNAME" > /usr/share/nginx/html/index.html;
           # Start nginx in foreground
           exec nginx -g 'daemon off;'
        ports:
        - containerPort: 80
