manifests/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-split
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: traffic-split
    alb.ingress.kubernetes.io/load-balancer-name: traffic-split
    #alb.ingress.kubernetes.io/security-groups: sg-00172d6a43a59843d
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/actions.weighted-canary: |
      {
        "type": "forward",
        "forwardConfig": {
          "targetGroups": [
            {
              "serviceName": "app-v1",
              "servicePort": 80,
              "weight": 90
            },
            {
              "serviceName": "app-v2",
              "servicePort": 80,
              "weight": 10
            }
          ]
        }
      }
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weighted-canary  # <-- This is a virtual service (matches the annotation)
                port:
                  name: use-annotation  # <-- Must literally be this string
