manifests/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-router1
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: traffic-split
    alb.ingress.kubernetes.io/group.name: traffic-split
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: weighted-canary
                port:
                  name: use-annotation
